tests/integration/fixtures/laugh/error/배열_인덱스가_숫자가_아님.laugh
변수 arr = 배열(3);
출력 arr["hello"];
